--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "favicons-webpack-plugin": "^3.0.1",
     "file-loader": "^6.0.0",
+    "fractional": "^1.0.0",
     "gh-pages": "^2.2.0",
     "glob": "^7.1.6",
     "html-loader": "^1.1.0",
