--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^5.0.0",
     "terser-webpack-plugin": "^3.0.1",
+    "uniqid": "^5.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
